# Open-switch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  OPENCODE_CONFIG_REFACTOR.md  README.md  WARP.md  announcements.json  index.html  package-lock.json  package.json  tailwind.config.cjs  test-config.ps1
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  AUTO_IMPORT_PROVIDER.md  AUTO_IMPORT_TEST_CASES.md  BUGS.md  DEEP_LINK.md  DONATE.en.md  DONATE.md  false-positive-template.md  release-process.md  release-template.md
scripts/: build-all.ps1  build-sub2api.ps1  check_locales.cjs  generate-icons.js
scripts/release/: preflight.cjs  publish_github_release_and_cask.cjs
src/: App.css  App.tsx  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  shell.json
src-tauri/src/: lib.rs  main.rs  opencode_error.rs
src-tauri/src/assets/rules/: riper-5-cn.md
src-tauri/src/commands/: account.rs  announcement.rs  backup.rs  codebuddy_cn.rs  codebuddy_instance.rs  deeplink.rs  gateway.rs  local_logs.rs  mcp.rs  mod.rs  model.rs  ohmy.rs  open_switch.rs  provider.rs  rule.rs  session.rs  settings.rs  skill.rs  skills.rs  status.rs  sub2api_proxy.rs  subprocess.rs  system.rs  usage.rs  workbuddy.rs  workbuddy_instance.rs
src-tauri/src/commands/opencode/: antigravity.rs  augment.rs  backup.rs  chat_migration.rs  claude_code.rs  codex.rs  deeplink.rs  devenv.rs  gemini.rs  kiro.rs  local_logs.rs  mcp.rs  mod.rs  model.rs  ohmy.rs  open_switch.rs  openclaw.rs  prompts.rs  provider.rs  proxy.rs  rule.rs  settings.rs  skills.rs  speedtest.rs  status.rs  usage.rs  warp.rs  windsurf.rs
src-tauri/src/commands/opencode/assets/rules/: riper-5-cn.md
src-tauri/src/config/: cursor_manager.rs  manager.rs  mcp_manager.rs  mod.rs  models.rs  open_switch_manager.rs  opencode_manager.rs
src-tauri/src/database/: schema.rs
src-tauri/src/modules/: announcement.rs  codebuddy_account.rs  codebuddy_cn_account.rs  codebuddy_cn_oauth.rs  codebuddy_oauth.rs  codex_account.rs  config.rs  cursor_account.rs  cursor_instance.rs  gemini_account.rs  github_copilot_account.rs  github_copilot_oauth.rs  kiro_instance.rs  linux_updater.rs  mod.rs  session_manager.rs  trae_account.rs  trae_oauth.rs  tray.rs  tray_layout.rs  update_checker.rs  vscode_inject.rs  web_report.rs  windsurf_instance.rs  windsurf_oauth.rs  workbuddy_account.rs  workbuddy_oauth.rs
src-tauri/src/modules/gateway/: account_pool.rs  account_pool_bridge.rs  api_key.rs  config.rs  db.rs  mod.rs  protocol_adapter.rs  proxy.rs  request_log.rs  router.rs  server.rs  types.rs
src-tauri/src/modules/opencode_config/: antigravity_manager.rs  augment_manager.rs  claude_code_manager.rs  codex_manager.rs  cursor_manager.rs  detector.rs  gemini_manager.rs  kiro_manager.rs  manager.rs  mcp_manager.rs  mod.rs  models.rs  open_switch_manager.rs  openclaw_manager.rs  opencode_manager.rs  warp_manager.rs  windsurf_manager.rs
src-tauri/src/modules/opencode_db/: mod.rs  schema.rs
src-tauri/src/modules/proxy/: handlers.rs  mod.rs  server.rs  service.rs  types.rs
src-tauri/src/modules/proxy/usage/: logger.rs  mod.rs  parser.rs
src-tauri/src/modules/subprocess/: cursor_welfare.rs  mod.rs  sub2api.rs  sub2api_sync.rs
src-tauri/windows/: hooks.nsh
src/components/: AnnouncementCenter.css  AnnouncementCenter.tsx  ApplyDialog.vue  CloseConfirmDialog.tsx  CodexOverviewTabsHeader.tsx  ConfirmDialog.vue  DeepLinkDialog.vue  DeployedProvidersDialog.vue  DetailPanel.vue  ErrorBoundary.tsx  FetchModelsDialog.vue  LanguageSwitch.vue  ModelDialog.vue  ModelList.vue  ModelTypeSelector.vue  OverviewTabsHeader.tsx  PlatformLayoutModal.tsx  ProviderDialog.vue  ProviderList.vue  QuickSettingsPopover.tsx  SettingsAccountTransferSection.tsx  SvgIcon.vue  Toast.tsx  UpdateDialog.vue
src/config/: modelTypes.ts  providerPresets.ts
src/hooks/: useToast.ts
src/i18n/: index.ts
src/locales/: ar.json  cs.json  de.json  en-US.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pl.json  pt-br.json  ru.json  tr.json  vi.json  zh-CN.json  zh-tw.json
src/pages/: AugmentAccountsPage.tsx  BackupPage.tsx  ClaudeCodeAccountsPage.tsx  CodebuddyCnAccountsPage.tsx  CodexAccountsPage.tsx  CursorWelfarePage.tsx  DashboardPage.css  DashboardPage.tsx  DevEnvPage.tsx  GatewayAccountPoolPage.tsx  GatewayApiKeysPage.tsx  GatewayDashboardPage.tsx  GatewayRequestLogPage.tsx  GeminiAccountsPage.tsx  McpPage.tsx  OhMyPage.tsx  OpenClawAccountsPage.tsx  OpenCodeAccountsPage.tsx  ProvidersPage.tsx  QoderAccountsPage.tsx  SessionsPage.tsx  SettingsPage.tsx  SkillsPage.tsx  Sub2apiPage.tsx  ToolStatusPage.tsx  UsagePage.tsx  WarpAccountsPage.tsx  WorkbuddyAccountsPage.tsx
src/router/: index.ts
src/services/: accountTransferService.ts  announcementService.ts  sub2apiClient.ts
src/stores/: providers.ts  useAnnouncementStore.ts  useGatewayStore.ts  usePlatformLayoutStore.ts  useProviderStore.ts  useSessionStore.ts  useSub2apiAdminStore.ts  useSub2apiStore.ts
src/styles/: base.css  components.css  layout.css  main.css  (+1 more)
(+65 files in other folders)
