[package]
name = "ai-switch"
version = "0.16.3"
description = "AI Switch"
authors = ["jlcodes"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

[lib]
name = "ai_switch_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 框架
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.20"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "zstd", "stream", "socks"] }

# HTTP 服务器
axum = { version = "0.8", features = [] }
tower-http = { version = "0.6", features = ["cors"] }
bytes = "1"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# Token 计算
tiktoken-rs = "0.9.1"

# 精确小数计算
rust_decimal = "1.34"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"

# 错误处理
thiserror = "2"
anyhow = "1.0"

# 系统路径与信息
dirs = "5.0"
sysinfo = "0.33"
libc = "0.2"

# 时间处理
chrono = "0.4"

# UUID 生成
uuid = { version = "1.10", features = ["v4", "serde"] }

# URL 处理
url = "2.5"
urlencoding = "2.1"

# 编码
encoding_rs = "0.8"
base64 = "0.22"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
tracing-log = "0.2"

# 安全与加密
sha2 = "0.10"
minisign-verify = "0.2"
md5 = "0.7"

# 异步流处理
futures = "0.3"
futures-util = "0.3"

# WebSocket
tokio-tungstenite = "0.26"

# 工具
regex = "1"
rand = "0.8"
tiny_http = "0.12"
lazy_static = "1.5"

# VS Code Copilot token injection (Windows only)
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
